@@ -1,10 +1,18 @@
-Sat May 10 15:57:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+Sat May 10 16:15:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
         
+          . The environment actions that did not appear in the model
+            did not have their implementation contained in a 
+            try...catch block. Fixed this problem.
+
+Sat May 10 15:57:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Generators.cpp:
+
           . Added the 'this.' qualifier in front of identifiers generated
             in conditions.
-            
+
           . Placed all environmental action implementation inside of an
             try...catch block.
 
